<resources>
    <string name="app_name">walkthrough</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bmi">BMI</string>
    <string name="menu_login">Login</string>
    <string name="menu_sensors">Sensors</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_calories">Calories</string>

    <string name="bmi_header">Body mass index</string>
    <string name="bmi_height">Height</string>
    <string name="bmi_weight">Weight</string>
    <string name="bmi_result">Body mass index is %s</string>

    <string name="login_header">Login</string>
    <string name="login_account">Account</string>
    <string name="login_account_placeholder">Enter Account</string>
    <string name="login_password">Password</string>
    <string name="login_password_placeholder">Enter Password</string>
    <string name="login_submit">Submit</string>

    <string name="calories_header">Calories</string>
    <string name="calories_height">Height</string>
    <string name="calories_weight">Weight</string>
    <string name="calories_age">Age</string>
    <string name="calories_intensity">Select physical activity intensity</string>
    <string name="calories_result">Total daily energy expenditure %s</string>
</resources>