<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_menu_bmi"
            android:title="@string/menu_bmi" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_menu_sensors"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_theme"
            android:title="@string/menu_theme" />
        <item
            android:id="@+id/nav_calories"
            android:icon="@drawable/ic_menu_calories"
            android:title="@string/menu_calories" />
    </group>
</menu>